Add following-n endpoint
